--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -75,13 +75,17 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Left Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Click)
-+ActionMappings=(ActionName="Left Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_Thumbstick_Click)
 +ActionMappings=(ActionName="Right Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Thumbstick_Click)
++ActionMappings=(ActionName="Left Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_Thumbstick_Click)
 +ActionMappings=(ActionName="Right Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Right_Thumbstick_Click)
-+AxisMappings=(AxisName="LeftPointer",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
-+AxisMappings=(AxisName="LeftPointer",Scale=1.000000,Key=ValveIndex_Left_Trigger_Axis)
-+AxisMappings=(AxisName="RightPointer",Scale=1.000000,Key=OculusTouch_Right_Trigger_Axis)
-+AxisMappings=(AxisName="RightPointer",Scale=1.000000,Key=ValveIndex_Right_Grip_Axis)
++ActionMappings=(ActionName="Left Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Trackpad_Click)
++ActionMappings=(ActionName="Right Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Trackpad_Click)
++AxisMappings=(AxisName="Left Pointer",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
++AxisMappings=(AxisName="Right Pointer",Scale=1.000000,Key=OculusTouch_Right_Trigger_Axis)
++AxisMappings=(AxisName="Left Pointer",Scale=1.000000,Key=ValveIndex_Left_Trigger_Axis)
++AxisMappings=(AxisName="Right Pointer",Scale=1.000000,Key=ValveIndex_Right_Trigger_Axis)
++AxisMappings=(AxisName="Left Pointer",Scale=1.000000,Key=Vive_Left_Trigger_Axis)
++AxisMappings=(AxisName="Right Pointer",Scale=1.000000,Key=Vive_Right_Trigger_Click)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
