--- a/CesiumVRTutorial.uproject
+++ b/CesiumVRTutorial.uproject
@@ -44,6 +44,7 @@
 		{
 			"Name": "BlueprintAssist",
 			"Enabled": true,
+			"Optional": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/9e895371fa3a471c87337860d6f341ff"
 		},
 		{
