--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -104,6 +104,12 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="ModifyMovement",Scale=1.000000,Key=ValveIndex_Right_Grip_Axis)
 +AxisMappings=(AxisName="ModifyMovement",Scale=1.000000,Key=Vive_Left_Grip_Click)
 +AxisMappings=(AxisName="ModifyMovement",Scale=1.000000,Key=Vive_Right_Grip_Click)
++AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
++AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_X)
++AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_X)
++AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_X)
++AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=Vive_Left_Trackpad_X)
++AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=Vive_Right_Trackpad_X)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
