improved input responsiveness, renamed input axes to conform to function names

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -86,30 +86,30 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right Pointer",Scale=1.000000,Key=ValveIndex_Right_Trigger_Axis)
 +AxisMappings=(AxisName="Left Pointer",Scale=1.000000,Key=Vive_Left_Trigger_Axis)
 +AxisMappings=(AxisName="Right Pointer",Scale=1.000000,Key=Vive_Right_Trigger_Click)
-+AxisMappings=(AxisName="MoveForwardBackward",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
-+AxisMappings=(AxisName="MoveForwardBackward",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_Y)
-+AxisMappings=(AxisName="MoveForwardBackward",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_Y)
-+AxisMappings=(AxisName="MoveForwardBackward",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_Y)
-+AxisMappings=(AxisName="MoveForwardBackward",Scale=1.000000,Key=Vive_Left_Trackpad_Y)
-+AxisMappings=(AxisName="MoveForwardBackward",Scale=1.000000,Key=Vive_Right_Trackpad_Y)
-+AxisMappings=(AxisName="MoveUpwardDownward",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Click)
-+AxisMappings=(AxisName="MoveUpwardDownward",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_Click)
-+AxisMappings=(AxisName="MoveUpwardDownward",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_Click)
-+AxisMappings=(AxisName="MoveUpwardDownward",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_Click)
-+AxisMappings=(AxisName="MoveUpwardDownward",Scale=1.000000,Key=Vive_Left_Trackpad_Click)
-+AxisMappings=(AxisName="MoveUpwardDownward",Scale=1.000000,Key=Vive_Right_Trackpad_Click)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_Y)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_Y)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_Y)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Vive_Left_Trackpad_Y)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Vive_Right_Trackpad_Y)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Click)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_Click)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_Click)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_Click)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Vive_Left_Trackpad_Click)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Vive_Right_Trackpad_Click)
 +AxisMappings=(AxisName="ModifyMovement",Scale=1.000000,Key=OculusTouch_Left_Grip_Click)
 +AxisMappings=(AxisName="ModifyMovement",Scale=1.000000,Key=OculusTouch_Right_Grip_Click)
 +AxisMappings=(AxisName="ModifyMovement",Scale=1.000000,Key=ValveIndex_Left_Grip_Axis)
 +AxisMappings=(AxisName="ModifyMovement",Scale=1.000000,Key=ValveIndex_Right_Grip_Axis)
 +AxisMappings=(AxisName="ModifyMovement",Scale=1.000000,Key=Vive_Left_Grip_Click)
 +AxisMappings=(AxisName="ModifyMovement",Scale=1.000000,Key=Vive_Right_Grip_Click)
-+AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
-+AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_X)
-+AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_X)
-+AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_X)
-+AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=Vive_Left_Trackpad_X)
-+AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=Vive_Right_Trackpad_X)
++AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
++AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_X)
++AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_X)
++AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_X)
++AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=Vive_Left_Trackpad_X)
++AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=Vive_Right_Trackpad_X)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
