--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -112,7 +112,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=Vive_Right_Trackpad_X)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
-DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
+DefaultTouchInterface=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 
