update to settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/CesiumVRTutorial/Main/Main.Main
+EditorStartupMap=/Game/CesiumVRTutorial/BuildForQuest/BuildForQuest.BuildForQuest
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -114,7 +114,7 @@ r.MorphTarget.Mode=True
 r.GPUCrashDebugging=False
 vr.InstancedStereo=False
 r.MobileHDR=False
-vr.MobileMultiView=False
+vr.MobileMultiView=True
 r.Mobile.UseHWsRGBEncoding=True
 vr.RoundRobinOcclusion=False
 vr.ODSCapture=False
@@ -251,7 +251,7 @@ StoreVersionOffsetX8664=0
 ApplicationDisplayName=
 VersionDisplayName=1.0
 MinSDKVersion=29
-TargetSDKVersion=28
+TargetSDKVersion=29
 InstallLocation=InternalOnly
 bEnableGradle=True
 bEnableLint=False
