--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -243,7 +243,7 @@ DefaultIonAccessToken=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiIwZWFjNTkwY
 EnableExperimentalOcclusionCullingFeature=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.YourCompany.[PROJECT]
+PackageName=com.Cesium.[PROJECT]
 StoreVersion=1
 StoreVersionOffsetArmV7=0
 StoreVersionOffsetArm64=0
