disable ovr plugin

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -291,7 +291,7 @@ KeyStorePassword=
 KeyPassword=
 bBuildForArm64=True
 bBuildForX8664=False
-bBuildForES31=True
+bBuildForES31=False
 bSupportsVulkan=True
 bSupportsVulkanSM5=False
 DebugVulkanLayerDirectory=(Path="")
