progress on grabbing and earth viewing

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/CesiumVRTutorial/BuildForQuest/BuildForQuest.BuildForQuest
+GameDefaultMap=/Game/CesiumVRTutorial/DraggingTheGlobe/DraggingTheGlobe.DraggingTheGlobe
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
@@ -348,4 +348,8 @@ NDKAPILevelOverride=
 BuildToolsOverride=
 bStreamLandscapeMeshLODs=False
 bEnableDomStorage=False
+
+[/Script/OculusHMD.OculusHMDRuntimeSettings]
+XrApi=NativeOpenXR
+ColorSpace=Quest
 
