--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -110,6 +110,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_X)
 +AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=Vive_Left_Trackpad_X)
 +AxisMappings=(AxisName="MoveLeft",Scale=1.000000,Key=Vive_Right_Trackpad_X)
++AxisMappings=(AxisName="RotateOnY",Scale=1.000000,Key=OculusTouch_Right_B_Click)
++AxisMappings=(AxisName="RotateOnY",Scale=-1.000000,Key=OculusTouch_Left_Y_Click)
++AxisMappings=(AxisName="LeftDrag",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
++AxisMappings=(AxisName="LeftDrag",Scale=1.000000,Key=ValveIndex_Left_Grip_Axis)
++AxisMappings=(AxisName="LeftDrag",Scale=1.000000,Key=Vive_Left_Grip_Click)
++AxisMappings=(AxisName="RightDrag",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
++AxisMappings=(AxisName="RightDrag",Scale=1.000000,Key=ValveIndex_Right_Grip_Axis)
++AxisMappings=(AxisName="RightDrag",Scale=1.000000,Key=Vive_Right_Grip_Click)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
