--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,6 +80,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Right Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Right_A_Click)
 +ActionMappings=(ActionName="Left Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Trackpad_Touch)
 +ActionMappings=(ActionName="Right Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Trackpad_Touch)
++ActionMappings=(ActionName="Open Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Menu_Click)
++ActionMappings=(ActionName="Open Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_System_Click)
++ActionMappings=(ActionName="Open Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Menu_Click)
 +AxisMappings=(AxisName="Left Pointer",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
 +AxisMappings=(AxisName="Right Pointer",Scale=1.000000,Key=OculusTouch_Right_Trigger_Axis)
 +AxisMappings=(AxisName="Left Pointer",Scale=1.000000,Key=ValveIndex_Left_Trigger_Axis)
