fix errors from update

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -66,6 +66,11 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
+bEnableMotionControls=True
+bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
+bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -127,8 +132,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="RightDrag",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
 +AxisMappings=(AxisName="RightDrag",Scale=1.000000,Key=ValveIndex_Right_Grip_Axis)
 +AxisMappings=(AxisName="RightDrag",Scale=1.000000,Key=Vive_Right_Grip_Click)
-DefaultPlayerInputClass=/Script/Engine.PlayerInput
-DefaultInputComponentClass=/Script/Engine.InputComponent
+DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
