--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -195,7 +195,7 @@ bExplicitCanvasChildZOrder=True
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=0297179C49A515CDFE533A9199F5A95C
+SecurityToken=
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
@@ -309,7 +309,7 @@ bEnableUniversalAPK=True
 bBundleABISplit=True
 bBundleLanguageSplit=True
 bBundleDensitySplit=True
-ExtraApplicationSettings=<meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|questpro" />
+ExtraApplicationSettings=<meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|questpro|quest3" />
 ExtraActivitySettings=
 bAndroidVoiceEnabled=False
 bEnableMulticastSupport=False
